--- a/calc_excersize.html
+++ b/calc_excersize.html
@@ -1,6 +1,35 @@
 <html>
+
 <head>
 </head>
+<link rel="stylesheet" type="text/css" href="calculator.css">
+<script src="excercise_calculator.js">
+</script>
+
 <body>
+    <h1 class>
+        KALKOOLATORE
+    </h1>
+    <div>
+        <table>
+            <tr>
+                <th>
+                    <button class="calc_button" onclick="document.getElementById('inputArea').innerHTML">+</button>
+                    <button class="calc_button">-</button>
+                    <button class="calc_button">*</button>
+                    <button class="calc_button">/</button>
+                    <button class="calc_button">%</button>
+                    <button class="calc_button">^</button>
+                    <button class="calc_button">=</button>
+
+
+                </th>
+            </tr>
+            <tr>
+                <textarea></textarea>
+            </tr>
+        </table>
+    </div>
 </body>
+
 </html>
